// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`an add more licenses button should be shown when no more licenses are available 1`] = `
<li
  className="caAtBd"
>
  <span
    className="fXreAk"
  >
    <span
      className="fdUIpZ"
    >
      <div>
        <div
          aria-checked={true}
          aria-label="Enable subscription for: Subscription name"
          className="ldWdTm"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="checkbox"
          tabIndex="0"
        >
          <span
            className="diphEL"
          />
        </div>
        <span
          aria-hidden="true"
          className="euIAzV"
        >
          On
        </span>
      </div>
    </span>
    <img
      alt=""
      className="jbZlKk"
      src="icon.svg"
    />
  </span>
  <span
    className="iyDwOW"
  >
    <span
      className="kyRcdL"
    >
      Subscription name
    </span>
    <span
      className="hkQMsn"
    >
      <span>
        0/20 remaining
      </span>
    </span>
  </span>
  <span
    className="kVHWFy"
  >
    <a
      className="jNEDIU"
      href="/account/subscriptions/subId"
      onClick={[Function]}
    >
      <span>
        Manage
      </span>
    </a>
  </span>
</li>
`;

exports[`the sitesubscription matches the snapshot 1`] = `
<li
  className="caAtBd"
>
  <span
    className="fXreAk"
  >
    <span
      className="fdUIpZ"
    >
      <div>
        <div
          aria-checked={true}
          aria-label="Enable subscription for: Subscription name"
          className="ldWdTm"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="checkbox"
          tabIndex="0"
        >
          <span
            className="diphEL"
          />
        </div>
        <span
          aria-hidden="true"
          className="euIAzV"
        >
          On
        </span>
      </div>
    </span>
    <img
      alt=""
      className="jbZlKk"
      src="icon.svg"
    />
  </span>
  <span
    className="iyDwOW"
  >
    <span
      className="kyRcdL"
    >
      Subscription name
    </span>
    <span
      className="hkQMsn"
    >
      <span>
        6/20 remaining
      </span>
    </span>
  </span>
  <span
    className="kVHWFy"
  >
    <a
      className="jNEDIU"
      href="/account/subscriptions/subId"
      onClick={[Function]}
    >
      <span>
        Manage
      </span>
    </a>
  </span>
</li>
`;
